# snowpark-checkpoints

./: .gitignore  .pre-commit-config.yaml  .snyk  CONTRIBUTING.md  LICENSE  README.md  __version__.py  demo_pyspark_pipeline.py  demo_snowpark_pipeline.py  license_header.txt  pyproject.toml  ruff.toml  snowpark-demo-add-a-column-schema.json  snowpark-demo-initial-creation-checkpoint-schema.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
Demos/: demo_pyspark_pipeline.py  demo_snowpark_pipeline.py  pandera_checks.py  snowpark-demo-add-a-column-schema.json  snowpark-demo-initial-creation-checkpoint-schema.json
docs/: README.md
e2e/: .env.test  .gitignore  .vscode-test.js  eslint.config.mjs  package-lock.json  (+3 more)
hypothesis-snowpark/: CHANGELOG.md  pyproject.toml
hypothesis-snowpark/src/snowflake/hypothesis_snowpark/: __init__.py  checks.py  strategies.py  strategies_utils.py  strategy_register.py
hypothesis-snowpark/test/: .coveragerc  conftest.py
hypothesis-snowpark/test/integ/: test_strategies.py
hypothesis-snowpark/test/resources/: non_nullable_columns.json  supported_columns.json
hypothesis-snowpark/test/unit/: test_checks.py  test_strategies.py  test_strategies_utils.py
snowpark-checkpoints-collector/: pyproject.toml  snowpark-testdf-schema.json
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/: __init__.py  collection_common.py  column_collection_utils.py  globals.py  summary_stats_collector.py
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/column_collection/: column_collector_manager.py
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/column_collection/model/: __init__.py  boolean_column_collector.py  column_collector_base.py  date_column_collector.py  dayTimeInterval_column_collector.py  decimal_column_collector.py  empty_column_collector.py  numeric_column_collector.py  string_column_collector.py  timestamp_column_collector.py  timestamp_ntz_column_collector.py
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/column_pandera_checks/: pandera_column_checks_manager.py
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/snow_connection_model/: __init__.py  snow_connection.py
snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/utils/: extra_config.py  telemetry.py
snowpark-checkpoints-collector/test/integ/: test_collect_df_mode_2.py  test_pandera_collect_schema.py
snowpark-checkpoints-collector/test/integ/test_collect_df_mode_1_expected/: test_df_with_null_values.json
snowpark-checkpoints-collector/test/integ/test_pandera_collect_schema_expected/: test_dataframe_with_unsupported_pandera_column_type.json  test_empty_df_with_schema.json  test_empty_df_with_string_column.json  test_full_df.json  test_full_df_all_column_type.json
snowpark-checkpoints-collector/test/unit/: test_column_collection.py  test_snow_connection.py
snowpark-checkpoints-hypothesis/: README.md  __version__.py  pyproject.toml
snowpark-checkpoints-hypothesis/recipe/: conda_build_config.yaml  meta.yaml
snowpark-checkpoints-hypothesis/src/snowflake/hypothesis_snowpark/: __init__.py  __version__.py  constants.py  custom_strategies.py  datatype_mapper.py  logging_utils.py  strategies.py  strategies_utils.py  strategy_register.py
snowpark-checkpoints-hypothesis/src/snowflake/hypothesis_snowpark/checks/: date_check.py
snowpark-checkpoints-hypothesis/src/snowflake/hypothesis_snowpark/io_utils/: __init__.py  io_default_strategy.py  io_env_strategy.py  io_file_manager.py
snowpark-checkpoints-hypothesis/src/snowflake/hypothesis_snowpark/telemetry/: telemetry.py
snowpark-checkpoints-hypothesis/test/: .coveragerc  conftest.py
snowpark-checkpoints-hypothesis/test/integ/: __init__.py  telemetry_compare_utils.py  test_io_strategies.py  test_strategies.py
snowpark-checkpoints-hypothesis/test/integ/test_strategies_expected/: test_dataframe_strategy_non_nullable_columns.json
snowpark-checkpoints-hypothesis/test/integ/test_telemetry_strategies_expected/: test_dataframe_strategy_from_object_schema_generated_schema_telemetry.json  test_dataframe_strategy_from_object_schema_generated_values_telemetry.json  test_dataframe_strategy_from_object_schema_missing_dtype_telemetry.json  test_dataframe_strategy_generated_schema_telemetry.json  test_dataframe_strategy_generated_values_telemetry.json  test_dataframe_strategy_non_nullable_columns_telemetry.json  test_dataframe_strategy_nullable_column_telemetry.json  test_io_strategy_from_json_telemetry.json  test_io_strategy_from_object_telemetry.json
snowpark-checkpoints-hypothesis/test/resources/: invalid_json.json  nullable_columns.json  supported_columns.json  test_io.json
snowpark-checkpoints-hypothesis/test/unit/: test_checks.py  test_custom_strategies.py  test_datatype_mapper.py  test_logger.py  test_logging_utils.py  test_strategies.py  test_strategies_utils.py  test_strategy_register.py
snowpark-checkpoints-hypothesis/test/unit/io_utils/: test_default_strategy.py
snowpark-checkpoints-testing/: README.md  __init__.py  performance_test.py  pyproject.toml
snowpark-checkpoints-testing/src/utils/: constants.py  utils.py  validations.py
snowpark-checkpoints-testing/src/utils/source_in/: __init__.py
snowpark-checkpoints-testing/src/utils/source_in/e2e_input/: data_e2e_test.csv  input_e2e_test_pyspark.py  input_e2e_test_snowpark.py
snowpark-checkpoints-testing/src/utils/source_in/stress_input/: input_collectors.py  input_validators.py
snowpark-checkpoints-testing/test/e2e/: test_e2e_checkpoints.py
snowpark-checkpoints-testing/test/stress/mode_dataframe/: test_performance_mode_dataframe.py
snowpark-checkpoints-testing/test/stress/mode_schema/: test_performance_mode_schema.py
src/snowflake/snowpark-checkpoints-collector/: pyproject.toml
src/snowflake/snowpark-checkpoints-collector/src/snowflake/snowpark_checkpoints_collector/: summary_stats_collector.py
src/snowflake/snowpark-checkpoints-collector/test/integ/: test_pandera_collect_schema.py
(+358 files in other folders)
