[project]
name = 'snowflake.snowpark.checkpoints'
authors = [
    {name = 'Snowflake, Inc.', email = 'snowflake-python-libraries-dl@snowflake.com' },
]
description = 'Snowflake Snowpark Checkpoints'
readme = 'README.md'
requires-python = '>=3.8,<3.12'
license = {text = 'Apache-2.0'}
keywords = [
    'Snowflake',
    'analytics',
    'cloud',
    'database',
    'db',
    'warehouse',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: SQL',
    'Programming Language :: Python :: 3',
    'Topic :: Database',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
dependencies = [
    'atpublic',
]
dynamic = ['version']

[tool.hatch.version]
path = 'src/snowflake/version.py'

[tool.hatch.build]
directory = '../../dist'
dev-mode-dirs = ['src']

[tool.hatch.build.targets.wheel]
packages = [
    'src/snowflake',
]

[tool.hatch.build.targets.sdist]
include = [
    'src/snowflake',
    'README.md',
    'tests/',
    'CHANGELOG.md',
    'pyproject.toml',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'