[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Snowflake, Inc.", email = "snowflake-python-libraries-dl@snowflake.com"},
]
description = "Snowflake Snowpark Checkpoints"
dynamic = ['version']
homepage = "https://www.snowflake.com/"
license = {text = "Apache License, Version 2.0"}
name = "snowpark-checkpoints"
readme = "README.md"
requires-python = '>=3.9,<3.12'

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  'Intended Audience :: Education',
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: SQL",
  "Topic :: Database",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

keywords = [
  'Snowflake',
  'Snowpark',
  'analytics',
  'cloud',
  'database',
  'data',
  'data-warehouse',
  'data-analysis',
  'data-science',
  'data-engineering',
  'data-analytics',
  'data-visualization',
  'data-processing',
  'data-management',
]

dependencies = [
  "pandera[io]==0.20.4",
  "hypothesis",
  "snowflake-snowpark-python>=1.23.0",
  "snowflake-connector-python",
]

[project.optional-dependencies]
pyspark = [
  "pyspark>=3.5.0",
]
development = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "coverage>=7.6.7",
  "twine==5.1.1",
  "hatchling==1.25.0",
  "pre-commit>=4.0.1",
  "setuptools>=70.0.0",
  "pyarrow>=18.0.0",
  "deepdiff>=8.0.0",
  "pyspark>=3.5.0",
]

[project.urls]
"Documentation" = "https://docs.snowflake.com/en/developer-guide/snowpark/python/snowpark-checkpoints-library"
"Issues" = "https://github.com/snowflakedb/snowpark-checkpoints/issues"
"Source" = "https://github.com/snowflakedb/snowpark-checkpoints"

[tool.hatch.build]
sources = [
  "snowpark-checkpoints-collectors/src",
  "snowpark-checkpoints-validators/src",
  "snowpark-checkpoints-hypothesis/src",
  "snowpark-checkpoints-configuration/src",
]

[tool.hatch.build.targets.sdist]
include = [
  "snowpark-checkpoints-validators/src/**",
  "snowpark-checkpoints-collectors/src/**",
  "snowpark-checkpoints-hypothesis/src/**",
  "snowpark-checkpoints-configuration/src/**",
]

[tool.hatch.build.targets.wheel]
directory = "dist"
packages = [
  "snowpark-checkpoints-validators/src/snowflake/snowpark_checkpoints",
  "snowpark-checkpoints-collectors/src/snowflake/snowpark_checkpoints_collector",
  "snowpark-checkpoints-hypothesis/src/snowflake/hypothesis_snowpark",
  "snowpark-checkpoints-configuration/src/snowflake/snowpark_checkpoints_configuration",
]

[tool.hatch.version]
path = "__version__.py"
pattern = '^__version__ = "(?P<version>.*)"'
source = "regex"

[[tool.hatch.sources]]
dir = "snowpark-checkpoints-collectors/src"
name = "snowpark-checkpoints-collectors"
type = "package"

[[tool.hatch.sources]]
dir = "snowpark-checkpoints-validators/src"
name = "snowpark-checkpoints-validators"
type = "package"

[[tool.hatch.sources]]
dir = "snowpark-checkpoints-hypothesis/src"
name = "snowpark-checkpoints-hypothesis"
type = "package"

[[tool.hatch.sources]]
dir = "snowpark-checkpoints-configuration/src"
name = "snowpark-checkpoints-configuration"
type = "package"

[tool.hatch.envs.docs]
dependencies = [
  'sphinx',
  'furo',
]

[tool.hatch.envs.docs.scripts]
build = [
  'cd ./docs && make clean',
  'cd ./docs && make html SPHINXOPTS="-W --keep-going"',
]
build_pretty = [
  'cd ./docs && make clean',
  'cd ./docs && sphinx-build -M html ./source ./build -D html_theme=furo',
]
