[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypothesis-snowpark"
authors = [{ name = "Snowflake Inc." }]
license = { file = "LICENSE" }
version = "0.0.0"
requires-python = ">=3.9"
description = "Hypothesis extension for generating Snowpark DataFrames"
readme = "README.md"
dependencies = [
    "snowflake-snowpark-python[localtest]",
    "hypothesis",
]
keywords = [
    'Snowflake',
    'analytics',
    'cloud',
    'database',
    'db',
    'snowspark',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    'Intended Audience :: Education',
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
development = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.7",
    "twine==5.1.1",
    "hatchling==1.25.0",
    "pre-commit>=4.0.1",
]

[project.urls]
"Source code" = "https://github.com/snowflakedb/snowpark-checkpoints/"
"Bug Tracker" = "https://github.com/snowflakedb/snowpark-checkpoints/issues"


[tool.hatch.version]
source = "regex"
path = "hypothesis_snowpark/__init__.py"
pattern = '^__version__ = "(.*)"'

[tool.setuptools.packages.find]
where = ["src/"]
include = ["snowflake.hypothesis_snowpark"]

[tool.hatch.build]
directory = 'hypothesis_snowpark'
dev-mode-dirs = ['src']

[tool.hatch.build.targets.wheel]
directory = "dist"
packages = ["hypothesis_snowpark/src/snowflake"]

[tool.hatch.build.targets.sdist]
directory = "dist"
exclude = ["/.github", "/.idea"]
include = [
    'hypothesis_snowpark/src',
    'README.md',
    'LICENSE',
    'test/',
    'docs/',
    'CHANGELOG.md',
    'pyproject.toml',
]

[tool.hatch.envs.default]
python = "3.9"
features = ["development"]

[[tool.hatch.envs.test_all.matrix]]
python = ['3.9', '3.10', '3.11']

[tool.hatch.envs.test_all]
template = 'test'

[tool.hatch.envs.test]
python = '3.9'

[tool.coverage.paths]
src = ["src"]
tests = ["test"]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.hatch.envs.precommit.scripts]
check = [
    'ruff check .',
]
fix = [
    'ruff check --fix .',
]
