[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Snowflake, Inc.", email = "snowflake-python-libraries-dl@snowflake.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  'Intended Audience :: Education',
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: SQL",
  "Topic :: Database",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "snowflake-connector-python[pandas]",
]
description = "Testing tools for Snowpark Checkpoints framework"
keywords = [
  'Snowflake',
  'analytics',
  'cloud',
  'database',
  'db',
  'Snowpark',
  'testing',
]
license = {text = "Apache License, Version 2.0"}
name = "snowpark-checkpoints-testing"
readme = "README.md"
requires-python = '>=3.9,<3.12'
version = "0.0.0"

[project.optional-dependencies]
development = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "coverage>=7.6.7",
  "psutil>=6.1.1",
  "hatchling==1.25.0",
  "pre-commit>=4.0.1",
  "certifi==2025.1.31",
]

[project.urls]
"Bug Tracker" = "https://github.com/snowflakedb/snowpark-checkpoints/issues"
"Source code" = "https://github.com/snowflakedb/snowpark-checkpoints/"

[tool.setuptools.packages.find]
include = ["snowpark-checkpoints-testing"]
where = ["snowpark-checkpoints-testing/"]

[tool.hatch.build]
dev-mode-dirs = ['snowpark-checkpoints-testing']
directory = 'snowpark-checkpoints-testing'

[tool.hatch.build.targets.wheel]
directory = "dist"
packages = ["snowpark-checkpoints-testing"]

[tool.hatch.build.targets.sdist]
directory = "dist"
exclude = ["/.github", "/.idea"]
include = [
  'snowpark-checkpoints-testing/',
  'pyproject.toml',
  'README.md',
]

[tool.hatch.envs.default]
features = ["development"]
python = "3.10"

[tool.hatch.envs.test]
python = '3.10'

[tool.coverage.paths]
src = ["snowpark-checkpoints-testing"]
tests = ["snowpark-checkpoints-testing"]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.hatch.envs.linter.scripts]
check = [
  'ruff check --fix .',
]

[tool.hatch.envs.test.scripts]
e2e = [
  "pip install -e ../snowpark-checkpoints-collectors",
  "pip install -e ../snowpark-checkpoints-validators",
  'pwd && ls -la',
  'pytest -v --junitxml=test/e2e/outcome/test-results.xml test/e2e/test_e2e_checkpoints.py',
]
stress = [
  "pip install -e ../snowpark-checkpoints-collectors",
  "pip install -e ../snowpark-checkpoints-validators",
  'pwd && ls -la',
  'pytest -v --junitxml=test/stress/outcome/test-results.xml test/stress/mode_dataframe/test_performance_mode_dataframe.py',
  'pytest -v --junitxml=test/stress/outcome/test-results.xml test/stress/mode_schema/test_performance_mode_schema.py',
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "snowpark-checkpoints-testing",
]
